# covidApi

./: README.md  README.rst  pyproject.toml  requirements.txt  setup.py
Covid19Api/: data.json  dataExtract.py  fastApi.py
Covid19Api.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
Covid_Api.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
covid/: dataExtract.py  fastApi.py  main.py  main.sh
data/: data.json
src/covid19api/: dataExtract.py
tests/: test_covid19api.py
